# actix-example

./: .gitignore  Cargo.toml  docker-compose.yaml
migrations/2020-10-28-051649_create_posts/: up.sql
src/: actions.rs  auth.rs  main.rs  models.rs  schema.rs
