[package]
name = "actix-example"
version = "0.0.1"
authors = ["Naoki Sawada"]
edition = "2018"

[dependencies]
actix-web = "3"
serde = "1.0.117"
log = "0.4.0"
env_logger = "0.8.1"
derive_more = "0.99.11"
actix-web-httpauth = "0.5.0"
actix-cors = "0.5.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde_json = "1.0.59"
uuid = { version = "0.8.0", features = ["v4", "serde"] }
